# guardrag

./: .env.example  .gitignore  LICENSE  README.md  SPRINT_PLAN.md  context.txt  index.html  pyproject.toml  rag_pipeline.py  requirements.txt  setup.ps1  vm.md
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.github/workflows/: ci.yml  evaluation.yml
api/: main.py  schemas.py
api/routes/: health.py  query.py
ci/: evaluation_checks.py  thresholds.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Project Description.docx  architecture.md  design-decisions.md  evaluation.md  haystack_info.txt  ollama_info.txt
embeddings/: __init__.py  embedder.py  index.py  store.py
evaluation/: __init__.py  evaluator.py  reports.py
evaluation/metrics/: faithfulness.py  latency.py  retrieval_recall.py
experiments/: __init__.py  run_experiment.py
generation/: __init__.py  generate.py  llm_client.py
generation/prompts/: comparison_prompt.txt  qa_prompt.txt
haystack/: rag_pipeline.py
ingestion/: __init__.py  chunking.py  ingest.py  preprocessing.py
ingestion/loaders/: code_loader.py  markdown_loader.py  pdf_loader.py
installer/windows/: GuardRagSetup.iss  build_installer.ps1  install_inno_setup.ps1  memo.txt  post_install.ps1  requirements.txt
pipelines/: __init__.py  build_index.py  evaluation.py  gui.py  logger.py  rag_pipeline.py  retrain_embeddings.py  run_evaluation.py  test.py
project_docs/: SPRINT_PLAN.md
retrieval/: __init__.py  filters.py  ranking.py  search.py
scripts/: install.py
setup_materials/: install_llm.py
