[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrag"
version = "0.1.0"
description = "Local RAG evaluation system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

llm = [
    "openai>=1.0.0",
]

haystack = [
    "haystack-ai==2.23.0",
    "ollama-haystack==6.0.0",
    "pypdf==5.1.0",
    "sentence-transformers==5.2.2",
    "torch==2.10.0",
    "transformers==4.57.0",
]

[tool.setuptools]
packages = ["guardrag"]
